# sales-intelligence-platform

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: main.py  server.py
apps/web/: app.js  index.html  styles.css
docs/: architecture.md
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 20260715_0001_initial_schema.py
scripts/: seed.py
tests/: test_scoring.py  test_workspace_state_api.py
