[project]
name = "sales-intelligence-platform"
version = "0.1.0"
description = "Lightweight sales intelligence platform with company tracking, contacts, and ICP scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sales-api = "apps.api.server:main"
sales-seed = "scripts.seed:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
