[project]
name = "sales-intelligence-platform"
version = "0.1.0"
description = "Generic multi-organization B2B sales intelligence and prospecting platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.30.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[project.scripts]
sales-api = "apps.api.main:run"
sales-seed = "scripts.seed:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
